# Onionymous

./: Cargo.toml  LICENSE  README.md  build.rs  download-requeriments.bat  readme2  readme2.md
src/: main.rs  resources.rs
src/config/: countries.rs  i18n.rs  mod.rs  settings.rs
src/core/: connection.rs  error.rs  mod.rs  routing.rs  state.rs
src/gui/: app.rs  blur.rs  logo.rs  mod.rs  theme.rs  widgets.rs
src/gui/views/: about.rs  home.rs  logs.rs  mod.rs  settings.rs  tools.rs
src/network/: autostart.rs  firewall.rs  ip_lookup.rs  mod.rs  proxy.rs  tor_updater.rs
src/tor/: bootstrap.rs  bridges.rs  control.rs  mod.rs  process.rs  torrc.rs
src/utils/: audio.rs  format.rs  mod.rs  runtime.rs
