[package]
name = "onionymous"
version = "1.0.0"
edition = "2021"
authors = ["Onionymous Team"]
description = "Privacy-first desktop app that routes your traffic through Tor"
license = "MIT"
repository = "https://github.com/R3LI4NT/Onionymous"
readme = "README.md"

[features]
# When enabled (default), tor.exe and geoip files from resources/tor/
# are compiled *into* the binary at build time. This makes the resulting
# .exe fully portable — you can move it to any folder and it still runs.
#
# To build without the embedded payload (faster dev builds, smaller
# binary — requires tor.exe on PATH or beside the .exe at runtime):
#     cargo build --no-default-features
default = ["embedded-tor"]
embedded-tor = []

[package.metadata.winres]
OriginalFilename = "onionymous.exe"
ProductName = "Onionymous"
FileDescription = "Privacy-first Tor routing application"
LegalCopyright = "Copyright © 2026 Onionymous"

[dependencies]
# GUI Framework - egui with eframe for cross-platform windows with modern look
eframe = { version = "0.28", features = ["default", "wgpu", "persistence"] }
egui = { version = "0.28", features = ["default"] }
egui_extras = { version = "0.28", features = ["default", "image", "svg"] }
egui-phosphor = "0.6"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Networking - SOCKS5 proxy support and HTTP
reqwest = { version = "0.12", features = ["json", "socks", "rustls-tls", "stream"], default-features = false }

# Tor-updater stack: we download the Tor Expert Bundle (.tar.gz),
# verify its SHA-256 against the official checksum, then extract it
# fully in-process — no shell involvement.
sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
futures-util = "0.3"
tokio-socks = "0.5"
hyper = { version = "1.4", features = ["full"] }

# Process management for Tor binary
which = "6.0"

# Directories / paths
directories = "5.0"
dirs = "5.0"

# Regex for parsing Tor logs
regex = "1.10"

# Tokio utilities
tokio-util = { version = "0.7", features = ["full"] }

# UUID for session tokens
uuid = { version = "1.10", features = ["v4"] }

# Crossbeam channels for cross-thread comms
crossbeam-channel = "0.5"

# Faster, non-poisoning locks for shared state
parking_lot = "0.12"

# Audio playback — used for synthesized UI feedback sounds. We don't
# bundle any audio files; sounds are generated in-memory as sine-wave
# samples so the binary stays small and there are no licensing concerns.
rodio = { version = "0.19", default-features = false, features = ["wav"] }

# Image rendering (for logo). The `ico` feature decodes .ico containers,
# `png` decodes the PNG frames typically embedded inside them.
image = { version = "0.25", features = ["png", "ico"] }

# System tray + notifications
tray-icon = "0.17"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Com",
    "Win32_Networking_WinInet",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }
winreg = "0.52"
# Same major version that eframe 0.28 re-exports, so the HWND we pull
# out of eframe's CreationContext matches what we pass to DWM.
raw-window-handle = "0.6"

# Unix-like dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
