[package]
name = "onionymous"
version = "1.0.0"
edition = "2026"
authors = ["Onionymous Team"]
description = "Privacy-first desktop app that routes your traffic through Tor"
license = "MIT"
repository = "https://github.com/R3LI4NT/Onionymous"
readme = "README.md"

[features]
default = ["embedded-tor"]
embedded-tor = []

[package.metadata.winres]
OriginalFilename = "onionymous.exe"
ProductName = "Onionymous"
FileDescription = "Privacy-first Tor routing application"
LegalCopyright = "Copyright © 2026 Onionymous"

[dependencies]
eframe = { version = "0.28", features = ["default", "wgpu", "persistence"] }
egui = { version = "0.28", features = ["default"] }
egui_extras = { version = "0.28", features = ["default", "image", "svg"] }
egui-phosphor = "0.6"

tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }

anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = ["json", "socks", "rustls-tls", "stream"], default-features = false }

sha2 = "0.10"
tar = "0.4"
flate2 = "1.0"
futures-util = "0.3"
tokio-socks = "0.5"
hyper = { version = "1.4", features = ["full"] }

which = "6.0"
directories = "5.0"
dirs = "5.0"
regex = "1.10"
tokio-util = { version = "0.7", features = ["full"] }
uuid = { version = "1.10", features = ["v4"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
rodio = { version = "0.19", default-features = false, features = ["wav"] }
image = { version = "0.25", features = ["png", "ico"] }
tray-icon = "0.17"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_System_Com",
    "Win32_Networking_WinInet",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }
winreg = "0.52"

raw-window-handle = "0.6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1
